# acoustic-AL

./: .env  .gitattributes  .gitignore  NPSC3000Report.pdf:Zone.Identifier  README.md  correlate.py  existing_annotations.ipynb  initial_annotations-Copy1.ipynb  plotting.py  pyproject.toml  util.py  view_spectrograms.py
.ipynb_checkpoints/: correlate-checkpoint.py  initial_annotations-Copy1-checkpoint.ipynb  intial_ann-checkpoint.ipynb  plotting-checkpoint.py  quick_EDA-checkpoint.ipynb  util-checkpoint.py
acoustic-AL/: config.py  correlating.py  plotting.py  preprocessing.py  requirements.txt  test.py  util.py
acoustic_AL/: __init__.py  config.py  correlating.py  plotting.py  preprocessing.py  util.py
correlations/: all_corrs  test
notebooks/: AL_2024-9-22.ipynb  AL_9-28-2024.ipynb  CRNN_segmentation.ipynb  YAMnet_embeddings_training_2025-15-9.ipynb  annotation_summary_context_2024-7-19.ipynb  annotations_metrics.ipynb  create_embedding_dataset.ipynb  fix_embedings_labels.ipynb  initial_dataset_EDA_2024-7-15.ipynb  logmel_dataset.ipynb  notebook_path.py  process_annotations-Copy1.ipynb  resnet16_logmel_multiclass_noise_9-30-2024.ipynb  resnet16_logmel_training_9-30-2024.ipynb  resnet_logmel_training_28-9-2024.ipynb  template_matching_2024-7-12.ipynb  train_pretrained.ipynb  verify_embeddings_2025-9-18.ipynb  verify_initial_ds_2024-9-15.ipynb  verify_model_28-8.ipynb  view_AL_metrics_20-5-2024.ipynb  view_annotations.ipynb
output/: .gitignore
reference_data/: test
scripts/: filter_false_positive_correlations.py  large_queries.py  log  make_dataset.py  (+12 more)
(+354 files in other folders)
